quick fix to search placeholder to make it work on firefox

--- a/src/main/webapp/css/buckyless/general.less
+++ b/src/main/webapp/css/buckyless/general.less
@@ -83,6 +83,18 @@ button:focus {
   transition: opacity 0.1s ease;
   opacity: 0;
 }
+[placeholder]:focus::-moz-placeholder {
+  transition: opacity 0.1s ease;
+  opacity: 0;
+}
+[placeholder]:focus:-moz-placeholder {
+  transition: opacity 0.1s ease;
+  opacity: 0;
+}
+[placeholder]:focus:-ms-input-placeholder {
+  transition: opacity 0.1s ease;
+  opacity: 0;
+}
 .btn-default:focus {
   color:@grayscale5;
   background-color:@white;
